k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort   # 👈 ADD THIS
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30008   # 👈 optional (or remove this line)
